# iwrl6432-spi-boot-tool

./: '  .gitignore  Makefile  README.md  aarch64-linux.cmake  arm-linux-gnueabihf.cmake  sources.list
scripts/: appimageToHex.py
source/: CMakeLists.txt  appimagedata.h  crc.c  crc.cpp  crc.h  gpio.cpp  gpio.h  main.cpp  mmwave-spi-ftdi.cpp  spi.cpp  spi.h
ti_headers/: DebugP.h  crc.h  gpio.h  soc_config.h
waveform/: waveform.sal
