cmake_minimum_required (VERSION 3.25)
project(xwrflasher)
add_executable(xwrflasher mmwave-spi-ftdi.cpp spi.cpp)
include_directories(${CMAKE_PREFIX_PATH}/include /usr/include/libftdi1)
target_link_directories(xwrflasher BEFORE PUBLIC ${CMAKE_PREFIX_PATH}/lib)
#target_link_libraries(xwrflasher mpsse ftd2xx pthread rt)
target_link_libraries(xwrflasher mpsse pthread rt)
set_property(TARGET xwrflasher PROPERTY CXX_STANDARD 17)
install(TARGETS xwrflasher DESTINATION bin)
