cmake_minimum_required (VERSION 3.25)
project(xwrflasher)
add_executable(xwrflasher spi.cpp)
include_directories(${CMAKE_PREFIX_PATH}/include)
target_link_directories(xwrflasher BEFORE PUBLIC ${CMAKE_PREFIX_PATH}/lib)
target_link_libraries(xwrflasher pthread rt)
set_property(TARGET xwrflasher PROPERTY CXX_STANDARD 17)
install(TARGETS xwrflasher DESTINATION bin)
